edited mongo connection string to match heroku's

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-CONNECTION_STRING=mongodb://stevencamper:stevencamper1@ds229068.mlab.com:29068/yourthoughts-app
+#CONNECTION_STRING=mongodb://stevencamper:stevencamper1@ds229068.mlab.com:29068/yourthoughts-app
+CONNECTION_STRING=mongodb://stevencamper:stevencamper1@ds043714.mlab.com:43714/heroku_02rj6cph
 PORT=8080
 NODE_ENV=production
