--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "dotenv": "^8.2.0",
     "email-validator": "^2.0.4",
     "express": "^4.17.1",
+    "mocha": "^7.0.0",
     "mongoose": "^5.8.7",
-    "nodemailer": "^6.4.2"
+    "mongoose-timezone": "^1.3.0",
+    "nodemailer": "^6.4.2",
+    "request-ip": "^2.1.3"
   }
 }
