--- a/client/package.json
+++ b/client/package.json
@@ -22,8 +22,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "mocha --reporter spec src/setupTests.js \"src/tests/*.spec.js\"",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "jest": {
+      "snapshotSerializers": ["enzyme-to-json/serializer"]
+      }
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,5 +42,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.4.3"
   }
 }
