fixed mistake on Submit.js and edited EmailServer.js

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@
 CONNECTION_STRING=mongodb://stevencamper:stevencamper1@ds043714.mlab.com:43714/heroku_02rj6cph
 PORT=8080
 NODE_ENV=production
+MAIL_USER=f.kaweesa@outlook.com
+MAIL_PASSWORD=fkaweesa1234567890
