--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
+    "jest-cli": "^25.1.0",
     "react": "^16.12.0",
     "react-alert": "^6.0.0",
     "react-alert-template-basic": "^1.0.0",
@@ -24,8 +25,10 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "jest": {
-      "snapshotSerializers": ["enzyme-to-json/serializer"]
-      }
+      "snapshotSerializers": [
+        "enzyme-to-json/serializer"
+      ]
+    }
   },
   "eslintConfig": {
     "extends": "react-app"
