--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
     "jest-cli": "^25.1.0",
+    "jest-css-modules": "^2.1.0",
     "react": "^16.12.0",
     "react-alert": "^6.0.0",
     "react-alert-template-basic": "^1.0.0",
@@ -23,12 +24,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject",
-    "jest": {
-      "snapshotSerializers": [
-        "enzyme-to-json/serializer"
-      ]
-    }
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
