--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 CONNECTION_STRING_DEV=mongodb://stevencamper:stevencamper1@ds229068.mlab.com:29068/yourthoughts-app
 CONNECTION_STRING_PROD=mongodb://stevencamper:stevencamper1@ds043714.mlab.com:43714/heroku_02rj6cph
 PORT=8080
-NODE_ENV=production
+NODE_ENV=dev
 MAIL_USER=f.kaweesa@outlook.com
 MAIL_PASSWORD=fkaweesa1234567890
