--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test": "jest --watchAll"
   },
   "eslintConfig": {
     "extends": "react-app"
