--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "mongoose-timezone": "^1.3.0",
     "nodemailer": "^6.4.2",
     "request-ip": "^2.1.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
