--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ CONNECTION_STRING_PROD=mongodb://stevencamper:stevencamper1@ds043714.mlab.com:43
 PORT=8080
 NODE_ENV=dev
 MAIL_USER=f.kaweesa@outlook.com
-MAIL_PASSWORD=Oveshoalm21.
+MAIL_PASSWORD=Steven7746340
